--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -30,7 +30,15 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.x'
+      - name: npm install
       - name: Run a multi-line script
         run: |
+          npm install
           echo Add other actions to build,
           echo test, and deploy your project.
+          echo node -v
+          echo npm -v
