--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -34,10 +34,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-      - name: npm install
+      - run: npm install
       - name: Run a multi-line script
         run: |
-          npm install
           echo Add other actions to build,
           echo test, and deploy your project.
           echo node -v
