--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -30,15 +30,33 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      # - name: Setup Node
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: '14.x'
+      # - name: Npm install
+      #   run: npm install
+      # - name: Run a multi-line script
+      #   run: |
+      #     echo Add other actions to build,
+      #     echo test, and deploy your project.
+      #     node -v
+      #     npm -v
+
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          node-version: '14.x'
-      - name: Npm install
-        run: npm install
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          node -v
-          npm -v
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Build and push
+        uses: docker/build-push-action@main
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
