--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       -
         name: Build and push
-        uses: docker/build-push-action@main
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
