--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -53,7 +53,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/test:latest
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/test
         
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
